--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.2",
+    "react-router-dom": "^6.30.1",
     "react-simple-keyboard": "^3.7.122",
     "react-use": "^17.5.0",
     "tailwind-merge": "^3.3.1",
